# aqua-verifier-rs

./: Cargo.toml  README.md
src/: api.rs  file_format.rs  lib.rs  main.rs  verify.rs
src/file_format/: helpers.rs
src/verify/: hash.rs  witness.rs
