[package]
name = "aqua-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = "0.4.24"
clap = { version = "4.1.8", features = ["derive"] }
hex = "0.4.3"
libsecp256k1 = "0.7.1"
once_cell = "1.17.1"
parking_lot = "0.12.1"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
sha3 = "0.10.6"
